# sapeur

./: .gitignore  pyproject.toml
src/sapeur/: __main__.py  main.py
src/sapeur/graphics/: animations.py  cells.py  textures.py
src/sapeur/model/: field.py
src/sapeur/utils/: array.py  texture.py
tests/utils/: test_array.py
